# PhotoOrganizer

./: .env  .env.example  .gitignore  AUDIT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAUNCH_CHECKLIST.html  LICENSE  LICENSE-PRO  LINKEDIN_DRAFTS.md  Makefile  NEXT_STEPS.html  PROJECT_INFO.md  PROJECT_OVERVIEW.html  README.md  RELEASE_NOTES.md  SECURITY.md  audit_report.md  build.py  build_report.md  main.py  push_to_github.bat  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
audit/: 01_inventaire.md  03_implementations.md  05_optimisations.md  PROMPT_ORGANIZE_ROADMAP.md
core/: __init__.py  file_operations.py  format_conversion.py  metadata.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  DISTRIBUTION.md  GETTING_STARTED.md  MEDIA.md  MONETIZATION.md  NEXT_STEPS.html  PRIVACY.md  PROJECT_OVERVIEW.html  PRO_UNLOCK.md  exe-optimization.html  exe-optimization.md
docs/archives/: RELEASE_1.0.0.md  audit_report_old.md  build_report_old.md
docs/archives/audit_2026-05-07/: 02_analyse_statique.md  04_tests.md  06_build.md  RAPPORT_FINAL.md
docs/archives/superseded_2026-05/: CLOUD_SYNC_DESIGN.md  PRO.md  README.md
docs/marketing/: LINKEDIN_DRAFTS.md
gui/: __init__.py  app.py
gui/frames/: __init__.py  file_organization_frame.py
gui/widgets/: scrollable_frame.py
src/: LICENSE  README.md  __init__.py  main.py  requirements.txt  version.py
src/cli/: __init__.py  duplicate_cli.py
src/config/: __init__.py  duplicate_config.py
src/core/: __init__.py  scheduler.py
src/core/metadata/: __init__.py  camera_detector.py  date_extractor.py  exif_extractor.py  gps_processor.py
src/core/operations/: __init__.py  duplicate_finder.py  duplicate_manager.py  file_manager.py  organizer.py  quarantine.py
src/modules/: __init__.py
src/photoorganizer_pro/: README.md  __init__.py
src/photoorganizer_pro/cli/: __init__.py  batch_organize.py
src/photoorganizer_pro/license/: __init__.py  keygen.py  validator.py
src/photoorganizer_pro/plugins/: __init__.py  base.py  manager.py
src/photoorganizer_pro/plugins/examples/: __init__.py  geotag_renamer.py
src/photoorganizer_pro/scheduler/: __init__.py  watch_folder.py
src/reports/: __init__.py  duplicate_reporter.py
src/ui/: __init__.py  app.py  prompt_examples.py  theme.py  tooltip.py  tooltips_fr.py
src/ui/frames/: __init__.py  duplicates_frame.py  history_frame.py  organize_frame.py  settings_frame.py
src/utils/: __init__.py  cache.py  config.py  hash_cache.py  license_validator.py  licensing.py  logger.py
test/: README.md  matrice_tests.xlsx  rapport_qualification.md  validation_ihm.html
test/scripts/: compare_outputs.py  generate_inputs.py  generate_matrix.py  run_tests.py
test_data/: .test_state.json  README.md  matrice_tests.xlsx  rapport_qualification.md  validation_ihm.html
test_data/inputs/input_mauvais_format/: notes.txt
test_data/inputs/input_pairs/: DSC_0006.cr2
test_data/scripts/: compare_outputs.py  generate_inputs.py  generate_matrix.py  run_tests.py  snapshot_state.py
tests/: __init__.py  conftest.py  test_modules.py
tests/functional/: test_config.py  test_duplicates.py  test_exif_cache.py  test_file_manager.py  test_licensing.py  test_organizer.py  test_pro_batch_cli.py  test_pro_license.py  test_pro_plugins.py  test_pro_watch_folder.py  test_quarantine.py
tests/perf/: test_perf.py
tests/smoke/: test_imports.py  test_organize_e2e.py  test_ui_v3.py  test_ux_v4.py
tests/stress/: test_stress.py
tests/volume/: test_volume.py
tools/: _audit_breakdown.py  smoke_exe.py  visual_audit.py
utils/: __init__.py  config_manager.py  file_utils.py  hash_utils.py  metadata_cache.py  preview_utils.py  progress_utils.py  rollback_utils.py  ui_utils.py
