[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photoorganizer"
version = "2.0.0"
description = "Automatic photo organizer by EXIF metadata"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Kiriiaq"}]

dependencies = [
    "customtkinter>=5.2.0,<6.0.0",
    "darkdetect>=0.8.0,<1.0.0",
    "Pillow>=10.0.0,<12.0.0",
    "exifread>=3.0.0,<4.0.0",
    "piexif>=1.1.3,<2.0.0",
    "pillow-heif>=0.13.0,<1.0.0",
    "requests>=2.31.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.4.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
photo-organizer = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.ico", "*.png", "*.jpg", "*.svg"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
