[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photoorganizer"
version = "2.3.1"
description = "Automatic photo organizer by EXIF metadata (Windows desktop, CustomTkinter)"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{name = "Kiriiaq", email = "manugrolleau48@gmail.com"}]
keywords = ["photo", "exif", "organizer", "metadata", "customtkinter", "windows"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Desktop Environment :: File Managers",
]

dependencies = [
    "customtkinter>=5.2.0,<6.0.0",
    "darkdetect>=0.8.0,<1.0.0",
    "Pillow>=12.2.0,<13.0.0",
    "exifread>=3.0.0,<4.0.0",
    "pillow-heif>=0.13.0,<1.0.0",
    "requests>=2.31.0,<3.0.0",
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.4.0",
    "bandit>=1.7",
    "pyinstaller>=6.0.0",
    # Test-only : fabrique les fixtures EXIF/GPS de test_organizer.py.
    # Retiré du runtime en 2026-05 (audit EXE) — ne PAS le remettre dans
    # dependencies ; il ne doit jamais être bundlé dans l'EXE.
    "piexif>=1.1.3",
]
dnd = [
    "tkinterdnd2>=0.4.0",
]
toast = [
    "plyer>=2.1",
]
pro = [
    # Extra conservé pour la future v3.0+ (watch-folder).
    # Inutile en v2.x — peut être ignoré tant que les entry points Pro
    # restent commentés dans [project.scripts] ci-dessous.
    "watchdog>=3.0",
]

[project.urls]
Homepage = "https://github.com/Kiriiaq/PhotoOrganizer"
Repository = "https://github.com/Kiriiaq/PhotoOrganizer"
Issues = "https://github.com/Kiriiaq/PhotoOrganizer/issues"
Funding = "https://ko-fi.com/kiriiaq"

[project.scripts]
photo-organizer = "src.main:main"
photo-organizer-dedup = "src.cli.duplicate_cli:main"
#
# --- Pro CLI entry points DEFERRED v3.0+ (pivot 2026-05-26) ---
#
# Following the shift to a single-edition trial+unlock model (10 trials free,
# then 10€ lifetime per machine), the standalone Pro modules below are gated
# until/unless the v2.x baseline proves traction. They remain on disk in
# src/photoorganizer_pro/ and stay test-skipped (see pytest markers).
#
# Re-enable here when reactivating in v3.0+ (and remove the @pytest.mark.skip
# decorators in tests/functional/test_pro_*.py).
#
# photo-organizer-pro-batch = "src.photoorganizer_pro.cli.batch_organize:main"
# photo-organizer-pro-watch = "src.photoorganizer_pro.scheduler.watch_folder:main"

# Third-party plugins are also deferred to v3.0+. The discovery mechanism stays
# in src/photoorganizer_pro/plugins/manager.py for future reactivation. Sample
# declaration when re-enabled:
#
#   [project.entry-points."photoorganizer_pro.plugins"]
#   geotag_renamer = "myplugin.geotag:GeotagRenamerPlugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.ico", "*.png", "*.jpg"]

[tool.ruff]
target-version = "py311"
line-length = 120
# Exclut les scripts utilitaires (générateurs de fixtures de qualification)
# où le style condensé est intentionnel et améliore la densité de lecture.
extend-exclude = ["test_data/scripts/generate_matrix.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# E501 : ligne trop longue — line-length=120 suffit comme limite, on n'exige pas le wrap.
# E402 : imports tardifs — justifiés pour les scripts qui modifient sys.path AVANT
#        d'importer (pattern src layout + tests sans installation pip).
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests as slow (deselect with -m \"not slow\")",
]
